--- a/Node.js/dynamic routes & advanced methods/views/shop/index.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/shop/index.ejs
@@ -27,7 +27,7 @@
                                 </div>
                                 <div class="card__actions"> <a href="/products/<%= product.id %>"
                                         class="btn">Details</a>
-                                    <button class="btn">Add to Cart</button>
+                                    <%- include('../includes/add-to-cart.ejs', {product}) %>
                                 </div>
                             </article>
                             <% } %>
