cart item deletion, also a fix when deleting a product from the system

--- a/Node.js/dynamic routes & advanced methods/views/shop/cart.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/shop/cart.ejs
@@ -6,9 +6,16 @@
             <main>
                 <% if (products.length> 0) { %>
                     <ul>
-                        <% products.forEach(({productData, quantity})=> { %>
+                        <% products.forEach(({productData, quantity, price})=> { %>
                             <li>
-                                <%= productData.title %> (<%= quantity %>)
+                                <p>
+                                    <%= productData.title %> (<%= quantity %>) x $<%= productData.price %>
+                                </p>
+                                <form action="/cart-delete-product" method="POST">
+                                    <input type="hidden" name="productId" value="<%= productData.id %>">
+                                    <input type="hidden" name="productPrice" value="<%= productData.price %>">
+                                    <button class="btn">Delete</button>
+                                </form>
                             </li>
                             <% }) %>
                     </ul>
