cookies, sessions introduction

--- a/Node.js/dynamic routes & advanced methods/public/css/main.css
+++ b/Node.js/dynamic routes & advanced methods/public/css/main.css
@@ -208,6 +208,8 @@ form {
 @media (min-width: 768px) {
 	.main-header__nav {
 		display: flex;
+		justify-content: space-around;
+		width: 100%;
 	}
 
 	#side-menu-toggle {
