--- a/Node.js/dynamic routes & advanced methods/views/auth/login.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/auth/login.ejs
@@ -7,18 +7,24 @@
         <%- include('../includes/navigation.ejs') %>
 
             <main>
-                <form class="login-form" action="/login" method="POST">
-                    <div class="form-control">
-                        <label for="email">E-Mail</label>
-                        <input type="email" name="email" id="email">
+                <% if (errorMessage) { %>
+                    <div>
+                        <%= errorMessage %>
                     </div>
-                    <div class="form-control">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password">
+                    <% } %>
+                        <form class="login-form" action="/login" method="POST">
+                            <div class="form-control">
+                                <label for="email">E-Mail</label>
+                                <input type="email" name="email" id="email">
 
-                    </div>
-                    <input type="hidden" value="<%= csrfToken %>" name="_csrf" />
-                    <button class="btn" type="submit">Login</button>
-                </form>
+                            </div>
+                            <div class="form-control">
+                                <label for="password">Password</label>
+                                <input type="password" name="password" id="password">
+
+                            </div>
+                            <input type="hidden" value="<%= csrfToken %>" name="_csrf" />
+                            <button class="btn" type="submit">Login</button>
+                        </form>
             </main>
             <%- include('../includes/end.ejs') %>
