newpassword, reset password, user structure changed

--- a/Node.js/dynamic routes & advanced methods/views/auth/login.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/auth/login.ejs
@@ -12,19 +12,30 @@
                         <%= errorMessage %>
                     </div>
                     <% } %>
-                        <form class="login-form" action="/login" method="POST">
-                            <div class="form-control">
-                                <label for="email">E-Mail</label>
-                                <input type="email" name="email" id="email">
 
+                        <% if (notification) { %>
+                            <div>
+                                <%= notification %>
                             </div>
-                            <div class="form-control">
-                                <label for="password">Password</label>
-                                <input type="password" name="password" id="password">
+                            <% } %>
 
-                            </div>
-                            <input type="hidden" value="<%= csrfToken %>" name="_csrf" />
-                            <button class="btn" type="submit">Login</button>
-                        </form>
+                                <form class="login-form" action="/login" method="POST">
+                                    <div class="form-control">
+                                        <label for="email">E-Mail</label>
+                                        <input type="email" name="email" id="email">
+
+                                    </div>
+                                    <div class="form-control">
+                                        <label for="password">Password</label>
+                                        <input type="password" name="password" id="password">
+
+                                    </div>
+                                    <input type="hidden" value="<%= csrfToken %>" name="_csrf" />
+                                    <button class="btn" type="submit">Login</button>
+                                </form>
+
+                                <div class="centered">
+                                    <a href="/reset-password">Reset password</a>
+                                </div>
             </main>
             <%- include('../includes/end.ejs') %>
