--- a/Node.js/dynamic routes & advanced methods/views/auth/signup.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/auth/signup.ejs
@@ -12,7 +12,7 @@
                         <%= errorMessage %>
                     </div>
                     <% } %>
-                        <form class="login-form" action="/signup" method="POST" novalidate>
+                        <form class="login-form" action="/signup" method="POST">
                             <div class="form-control">
                                 <label for="email">E-Mail</label>
                                 <input type="email" name="email" id="email">
