--- a/Node.js/dynamic routes & advanced methods/views/shop/index.ejs
+++ b/Node.js/dynamic routes & advanced methods/views/shop/index.ejs
@@ -34,6 +34,25 @@
                             </article>
                             <% } %>
                     </div>
+                    <section class="pagination">
+                        <% if (currentPage!=1) { %> <a href="/?page=1">1</a>
+                            <% } %>
+                                <a href="/?page=<%= currentPage %>" class="active">
+                                    <%= currentPage %>
+                                </a>
+
+                                <% if (hasNextPage) { %>
+                                    <a href="/?page=<%= nextPage %>" class="active">
+                                        <%= nextPage %>
+                                    </a>
+                                    <% } %>
+
+                                        <% if (lastPage !==currentPage && nextPage !==lastPage) { %>
+                                            <a href="/?page=<%= lastPage %>" class="active">
+                                                <%= lastPage %>
+                                            </a>
+                                            <% } %>
+                    </section>
                     <% } else { %>
                         <h1>No Products Found!</h1>
                         <% } %>
